--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express-session": "^1.17.0",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.7.12",
+    "moment": "^2.24.0",
+    "mongoose": "^5.8.3",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
   }
