--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "mongoose": "^5.8.3",
+    "mongoose-auto-increment": "^5.0.1",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
   }
