--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "express-session": "^1.17.0",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
+    "md5": "^2.2.1",
     "moment": "^2.24.0",
     "mongoose": "^5.8.3",
     "mongoose-auto-increment": "^5.0.1",
     "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "query-string": "^6.9.0"
   }
 }
