--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "express-session": "^1.17.0",
+    "formidable": "^1.2.1",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.2.1",
